[package]
name = "fractal-conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", rev = "3c5ebad4ae24fb3f30f03acb607e80d934fa7ad7" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "b95dd21ccfa3665f27de862412ff4301f1f965ad" }
bevy_egui = "0.15"

num = "0.4.0"
arrayvec = "0.7.2"
nalgebra = "0.31.1"
simba = "0.7.2"

# Debugging Helpers
bevy_prototype_debug_lines = "0.8"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"