[package]
name = "fractal-conductor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", commit = "57411f98433795d56e1a5ba0c9fce080a6d7c805" }
iyes_progress = { git = "https://github.com/IyesGames/iyes_progress.git", rev = "d0de750f13ac895d097acf2eacbee1835dcfd7cd" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", commit = "ef037f90f18495750b20244585df7759909e7cfe" }
bevy_egui = "0.16.0"
num = "0.4"
num-derive = "0.3"

# Debugging Helpers
bevy_prototype_debug_lines = "0.8"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"